# yukikaze

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dprint.json  justfile
.github/: renovate.json
.github/workflows/: rust.yml  yukikaze.yml
src/: bot.rs  lib.rs  main.rs  msg.rs
src/server/: template.rs
src/server/template/: inoreader.rs
src/template/: inoreader.rs
