[package]
name = "yukikaze"
version = "0.5.1"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.0.1", optional = true }
html2md = "0.2.13"
log = "0.4.14"
log-panics = "2.0.0"
pulldown-cmark = { version = "0.8.0", optional = true }
regex = { version = "1.5.4", optional = true }
reqwest = { version = "0.11.4", features = ["json", "rustls-tls"], default-features = false, optional = true }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = { version = "1.0.66", optional = true }
stackdriver_logger = { version = "0.8.0", optional = true }
telegram_types = { version = "0.6.0", optional = true }
tokio = { version = "1.10.0", features = ["rt", "rt-multi-thread"], optional = true }
warp = { version = "0.3.1", optional = true }

[features]
default = ["message", "server"]
message = []
server = ["message", "bytes", "pulldown-cmark", "regex", "reqwest", "serde_json", "stackdriver_logger", "telegram_types", "tokio", "warp"]

